# recursion_lab

./: CMakeLists.txt  main.cpp
src/: triangle_number_calculator.cpp  triangle_number_calculator.hpp
tests/: triangle_number_calculator_test.cpp
